# rust_DDOS_attacker

./: Cargo.toml  README.md
releases/macos/: dos_attacker
releases/windows/: README.md
src/: attack.rs  extra_fn.rs  main.rs  ram_manger.rs  where_attack.rs
src/ai_attack/: mod.rs
src/normal_attack/: mod.rs  udp_version.rs
