[package]
name = "dos_attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }
once_cell = "1.15.0"